Bug 49558 - x11-base/xorg-server-1.11.4 crashes with latest intel git tree driver
Summary: x11-base/xorg-server-1.11.4 crashes with latest intel git tree driver
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-06 12:47 UTC by Toralf Förster
Modified: 2013-01-24 03:29 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Toralf Förster 2012-05-06 12:47:09 UTC
Something between 2.19.0 and 079b491 yields into in a X server crash (GM45, i915 kernel module) as soon as I start google earth6.2.2.6613 :

[ 25028.182] 0: /usr/bin/X (xorg_backtrace+0x3c) [0x81beb1c]
[ 25028.182] 1: /usr/bin/X (0x8048000+0x17a621) [0x81c2621]
[ 25028.182] 2: (vdso) (__kernel_rt_sigreturn+0x0) [0xb773440c]
[ 25028.182] 3: /usr/lib/xorg/modules/libfb.so (fbPolyGlyphBlt+0x254) [0xb7262a74]
[ 25028.182] 4: /usr/lib/xorg/modules/drivers/intel_drv.so (0xb726e000+0x4e091) [0xb72bc091]
[ 25028.182] 5: /usr/bin/X (0x8048000+0xff97c) [0x814797c]
[ 25028.182] 6: /usr/bin/X (doPolyText+0x1c3) [0x8079953]
[ 25028.182] 7: /usr/bin/X (PolyText+0x5f) [0x807abbf]
[ 25028.183] 8: /usr/bin/X (0x8048000+0x2c6a9) [0x80746a9]
[ 25028.183] 9: /usr/bin/X (0x8048000+0x2f765) [0x8077765]
[ 25028.183] 10: /usr/bin/X (0x8048000+0x1d83a) [0x806583a]
[ 25028.183] 11: /lib/libc.so.6 (__libc_start_main+0xe7) [0xb74b33d7]
[ 25028.183] 12: /usr/bin/X (0x8048000+0x1d3f1) [0x80653f1]
[ 25028.183] Segmentation fault at address 0x78c
[ 25028.183]
Comment 1 Chris Wilson 2012-05-06 13:59:25 UTC
commit 74d2707de4a0f94d2143f1e9c60762e4167b1ea6
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Sun May 6 21:51:27 2012 +0100

    sna: Remove short-circuiting for large font fallbacks
    
    Unlike the fallback for an unhandled depth, we need to ensure that the
    pixmaps are mapped to the CPU before calling the fb routines.
    
    Reported-by: Toralf Förster <toralf.foerster@gmx.de>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=49558
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.